// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markdown renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-size: 50px;
  line-height: 56px;
  max-width: 1200px;
  font-weight: 600;
  overflow-wrap: break-word;
}

.c3 {
  font-size: 34px;
  line-height: 40px;
  max-width: 816px;
  font-weight: 600;
  overflow-wrap: break-word;
}

.c4 {
  font-size: 26px;
  line-height: 32px;
  max-width: 624px;
  font-weight: 600;
  overflow-wrap: break-word;
}

.c5 {
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
  font-weight: 600;
  overflow-wrap: break-word;
}

.c2 {
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c6:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c8 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  text-align: start;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c10 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  text-align: start;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c7 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

@media only screen and (max-width:768px) {
  .c1 {
    font-size: 34px;
    line-height: 40px;
    max-width: 816px;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    font-size: 26px;
    line-height: 32px;
    max-width: 624px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    font-size: 18px;
    line-height: 24px;
    max-width: 432px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    font-size: 16px;
    line-height: 22px;
    max-width: 384px;
  }
}

<div
  class="c0"
>
  <div>
    <h1
      class="c1"
      id="h1"
    >
      H1
    </h1>
    <p
      class="c2"
    >
      Paragraph
    </p>
    <h2
      class="c3"
      id="h2"
    >
      H2
    </h2>
    <h3
      class="c4"
      id="h3"
    >
      H3
    </h3>
    <h4
      class="c5"
      id="h4"
    >
      H4
    </h4>
    <p
      class="c2"
    >
      <a
        class="c6"
        href="#"
      >
        a link
      </a>
    </p>
    <blockquote>
      <p
        class="c2"
      >
        i carry your heart with me
      </p>
    </blockquote>
    <p
      class="c2"
    >
      <img
        alt="alt text"
        class=""
        src="//v2.grommet.io/assets/IMG_4245.jpg"
        title="Markdown Image"
      />
    </p>
    <table
      class="c7"
    >
      <thead
        class="StyledTable__StyledTableHeader-sc-1m3u5g-4"
      >
        <tr
          class="StyledTable__StyledTableRow-sc-1m3u5g-2"
        >
          <td
            class="c8"
          >
            <div
              class="c9"
            >
              Markdown
            </div>
          </td>
          <td
            class="c8"
          >
            <div
              class="c9"
            >
              Less
            </div>
          </td>
          <td
            class="c8"
          >
            <div
              class="c9"
            >
              Pretty
            </div>
          </td>
        </tr>
      </thead>
      <tbody
        class="StyledTable__StyledTableBody-sc-1m3u5g-3"
      >
        <tr
          class="StyledTable__StyledTableRow-sc-1m3u5g-2"
        >
          <td
            class="c10"
          >
            <em>
              Still
            </em>
          </td>
          <td
            class="c10"
          >
            <code>
              renders
            </code>
          </td>
          <td
            class="c10"
          >
            <strong>
              nicely
            </strong>
          </td>
        </tr>
        <tr
          class="StyledTable__StyledTableRow-sc-1m3u5g-2"
        >
          <td
            class="c10"
          >
            1
          </td>
          <td
            class="c10"
          >
            2
          </td>
          <td
            class="c10"
          >
            3
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`wrapper 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  font-size: 50px;
  line-height: 56px;
  max-width: 1200px;
  font-weight: 600;
  overflow-wrap: break-word;
}

.c5 {
  font-size: 34px;
  line-height: 40px;
  max-width: 816px;
  font-weight: 600;
  overflow-wrap: break-word;
}

.c6 {
  font-size: 26px;
  line-height: 32px;
  max-width: 624px;
  font-weight: 600;
  overflow-wrap: break-word;
}

.c7 {
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
  font-weight: 600;
  overflow-wrap: break-word;
}

.c4 {
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  height: 12px;
}

.c8 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c8:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c10 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  text-align: start;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c11 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  text-align: start;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c9 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

@media only screen and (max-width:768px) {
  .c2 {
    font-size: 34px;
    line-height: 40px;
    max-width: 816px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    font-size: 26px;
    line-height: 32px;
    max-width: 624px;
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    font-size: 18px;
    line-height: 24px;
    max-width: 432px;
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    font-size: 16px;
    line-height: 22px;
    max-width: 384px;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    height: 6px;
  }
}

<div
  class="c0"
>
  <div>
    <div
      class="c1"
    >
      <h1
        class="c2"
        id="h1"
      >
        H1
      </h1>
      <div
        class="c3"
      />
      <p
        class="c4"
      >
        Paragraph
      </p>
      <div
        class="c3"
      />
      <h2
        class="c5"
        id="h2"
      >
        H2
      </h2>
      <div
        class="c3"
      />
      <h3
        class="c6"
        id="h3"
      >
        H3
      </h3>
      <div
        class="c3"
      />
      <h4
        class="c7"
        id="h4"
      >
        H4
      </h4>
      <div
        class="c3"
      />
      <p
        class="c4"
      >
        <a
          class="c8"
          href="#"
        >
          a link
        </a>
      </p>
      <div
        class="c3"
      />
      <blockquote>
        <p
          class="c4"
        >
          i carry your heart with me
        </p>
      </blockquote>
      <div
        class="c3"
      />
      <p
        class="c4"
      >
        <img
          alt="alt text"
          class=""
          src="//v2.grommet.io/assets/IMG_4245.jpg"
          title="Markdown Image"
        />
      </p>
      <div
        class="c3"
      />
      <table
        class="c9"
      >
        <thead
          class="StyledTable__StyledTableHeader-sc-1m3u5g-4"
        >
          <tr
            class="StyledTable__StyledTableRow-sc-1m3u5g-2"
          >
            <td
              class="c10"
            >
              <div
                class="c1"
              >
                Markdown
              </div>
            </td>
            <td
              class="c10"
            >
              <div
                class="c1"
              >
                Less
              </div>
            </td>
            <td
              class="c10"
            >
              <div
                class="c1"
              >
                Pretty
              </div>
            </td>
          </tr>
        </thead>
        <tbody
          class="StyledTable__StyledTableBody-sc-1m3u5g-3"
        >
          <tr
            class="StyledTable__StyledTableRow-sc-1m3u5g-2"
          >
            <td
              class="c11"
            >
              <em>
                Still
              </em>
            </td>
            <td
              class="c11"
            >
              <code>
                renders
              </code>
            </td>
            <td
              class="c11"
            >
              <strong>
                nicely
              </strong>
            </td>
          </tr>
          <tr
            class="StyledTable__StyledTableRow-sc-1m3u5g-2"
          >
            <td
              class="c11"
            >
              1
            </td>
            <td
              class="c11"
            >
              2
            </td>
            <td
              class="c11"
            >
              3
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
